--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,14 @@
     <string name="log_in">Log In</string>
     <string name="password_hint">Password</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_report">Report</string>
+    <string name="title_settings">Settings</string>
     <string name="ok">Ok</string>
     <string name="login_is_empty">Login is empty</string>
     <string name="password_is_empty">Password is empty</string>
     <string name="no_iternet_connection">Network connection error</string>
     <string name="bad_credentials">Bad credentials</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
